# omniroster

./: .gitignore  README.md  nginx.conf  package.json
.github/workflows/: deploy.yml
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css
app/src/components/: DetachmentSelector.tsx  DoctrinaSelector.tsx  HaloscreeedPanel.tsx  PointsBar.tsx  RosterPanel.tsx  StatCard.tsx
app/src/data/units/: admech.json
app/src/engine/: index.ts
app/src/store/: armyStore.ts
app/src/types/: index.ts
data/units/: admech.json
engine/: Cargo.toml
engine/src/: lib.rs  resolver.rs  types.rs
