[package]
name = "omniroster-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"

[dev-dependencies]
wasm-bindgen-test = "=0.3.42"

[profile.release]
opt-level = "s"
